Added support for deleting tournaments